# standard-macro-library

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/SML/: sml.h  sml_algo.h  sml_circular_buffer.h  sml_circular_buffer.inl  sml_common.h  sml_dmat3.h  sml_dvec3.h  sml_dyn_queue.h  sml_dyn_queue.inl  sml_dyn_stack.h  sml_dyn_vector.h  sml_dyn_vector.inl  sml_extendible_hash.h  sml_extendible_hash.inl  sml_filesystem.h  sml_logger.h  sml_mat3.h  sml_math.h  sml_math_types.h  sml_string.h  sml_vec3.h
src/: CMakeLists.txt  sml.c  sml_algo.c  sml_filesystem.c  sml_logger.c  sml_string.c
test/: CMakeLists.txt  main.c  templates.c  templates.h
